...
        properties = DialogProperties(usePlatformDefaultWidth = false),
        onDismissRequest = {}
    ) {
        Scaffold(
            topBar = {
                TopAppBar(
                    title = {Text(text = "Select recipe categories") },
                    navigationIcon = {
                        IconButton(onClick = { onDismiss() }) {
                            Icon(
                                imageVector = Icons.Default.Clear,
                                contentDescription = "Clear button"
                            )
                        }
                    },
                    actions = {
                        TextButton(
                            onClick = { onSave() },
                            modifier = modifier.testTag("Save button")
                        ) {
                            Text(text = stringResource(id = R.string.save))
                        }
                    }
                )
            }
        ) { paddingValues ->
            Column(
                modifier = modifier
                    .fillMaxSize()
                    .padding(paddingValues)
                    .testTag("Categories dialog")
            ) {
                LazyColumn(
                    modifier = modifier.testTag("Category lazy column")
                ) {
                    itemsIndexed(categories.keys.toList()) { _, category ->
                        categories[category]?.let { isChecked ->
                            CategoryCheckboxItem(
                                category = category,
                                isChecked = isChecked,
...
