<resources>
    <string name="app_name">RecipeApp</string>
    <string name="categories">Categories</string>
    <string name="add_image">Add image</string>
    <string name="add_recipe">Add recipe</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="reorder">Reorder</string>
    <string name="tap_or_swipe">Tap to edit, swipe to delete</string>
    <string name="type_ingr_name">Type ingredient name</string>
    <string name="servings">Servings</string>
    <string name="set_servings">Set servings</string>
    <string name="prep_time">Prep time</string>
    <string name="set_time">Set time</string>
    <string name="ingredient">Ingredient</string>
    <string name="search">Search</string>
    <string name="recipes">Recipes</string>
    <string name="home">Home</string>
    <string name="saved">Saved</string>
    <string name="list">List</string>
    <string name="account">Account</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="shopping_list">Shopping List</string>
    <string name="quantity">Quantity</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="no_account_text">Don\'t have an account?</string>
    <string name="not_logged_in">You are not logged in</string>
    <string name="login_or_signup">Login or Signup</string>
    <string name="prep_time_sheet_subtext">How long does it take to prepare this recipe</string>
    <string name="servings_sheet_subtext">Select number of portions this recipe makes</string>
    <string name="fileprovider">com.example.recipeapp.fileprovider</string>
    <string name="save">Save</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_image">Select Image</string>
    <string name="set_categories">Set categories</string>
</resources>