...
        sheetState = modalSheetState,
    ) {
        Column(
            modifier = modifier
                .fillMaxWidth()
                .padding(horizontal = 16.dp)
                .testTag("Servings picker"),
        ) {
            Text(
                text = stringResource(id = R.string.servings),
                style = MaterialTheme.typography.titleMedium,
                fontWeight = FontWeight.SemiBold,
                modifier = modifier.padding(bottom = 4.dp)
...
                value = selectedServings,
                range = 1..25,
                onValueChange = { onSelectedServings(it) },
                dividersColor = MaterialTheme.colorScheme.primary,
                modifier = modifier
                    .fillMaxWidth()
                    .testTag("Servings number picker")
            )

            Button(
                modifier = modifier
                    .align(Alignment.CenterHorizontally)
                    .padding(vertical = 8.dp)
                    .testTag("Save servings button"),
                onClick = { onSave() }
            ) {
                Text(text = stringResource(id = R.string.save))
            }
        }
    }
...
