...
        sheetState = modalSheetState,
    ) {
        Column(
            modifier = modifier
                .fillMaxWidth()
                .padding(horizontal = 16.dp)
                .testTag("Prep time picker"),
        ) {
            Text(
                text = stringResource(id = R.string.prep_time),
                style = MaterialTheme.typography.titleMedium,
                fontWeight = FontWeight.SemiBold,
                modifier = modifier.padding(bottom = 4.dp)
...
                    value = selectedPrepTimeHours,
                    onValueChange = { onSelectedPrepTimeHours(it) },
                    dividersColor = MaterialTheme.colorScheme.primary,
                    list = hourList,
                    modifier = modifier
                        .weight(1F)
                        .testTag("Hours list item picker")
                )

                ListItemPicker(
                    value = selectedPrepTimeMinutes,
                    onValueChange = { onSelectedPrepTimeMinutes(it) },
                    dividersColor = MaterialTheme.colorScheme.primary,
...
            }

            Button(
                modifier = modifier
                    .align(Alignment.CenterHorizontally)
                    .padding(vertical = 8.dp)
                    .testTag("Save prep time button"),
                onClick = { onSave() }
            ) {
                Text(text = stringResource(id = R.string.save))
            }
        }
    }
...
